# psyphy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COVARIANCE_FIELD_SUMMARY.md  LICENSE.md  LINTING_SETUP.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: gh-pages.yml  lint.yml  publish.yml
docs/: API_DESIGN_DOCUMENT.md  CONTRIBUTING.md  index.md  reference.md  usage.md
docs/design/: issue_4_implementation_summary.md
docs/examples/: covariance_field.md  index.md
docs/examples/covariance_field/: covariance_field.md  covariance_field_demo.py
docs/examples/mvp/: offline_fit_mvp.md  offline_fit_mvp.py  offline_fit_mvp_with_map_optimizer.py
docs/examples/optim/: map.md
docs/examples/wppm/: full_wppm_fit_example.md  full_wppm_fit_example.py  nuts_inference_example.md  nuts_inference_example.py  quick_start.md  quick_start.py  weber_law_demo.py
docs/reference/: acquisition.md  data.md  inference.md  model.md  overview.md  posterior.md  session.md  trial_placement.md  utils.md
docs/stylesheets/: extra.css
experiments/auditory/: demo.py
psyphy/data/: __init__.py  transforms.py
psyphy/examples/notebooks/: README.md
psyphy/inference/: __init__.py  base.py  langevin.py  laplace.py  map_optimizer.py
psyphy/model/: prior.py  task.py
psyphy/posterior/: __init__.py  base_posterior.py  diagnostics.py  posterior.py
psyphy/session/: __init__.py  experiment_session.py
psyphy/trial_placement/: __init__.py  base.py  greedy_map.py  grid.py  info_gain.py  sobol.py  staircase.py
psyphy/utils/: __init__.py  candidates.py  math.py  rng.py
src/psyphy/: __init__.py
src/psyphy/acquisition/: __init__.py  base.py  expected_improvement.py  mutual_information.py  optimize.py  upper_confidence_bound.py
src/psyphy/data/: __init__.py  dataset.py  io.py  transforms.py
src/psyphy/inference/: __init__.py  base.py  langevin.py  laplace.py  map_optimizer.py  nuts.py
src/psyphy/model/: __init__.py  base.py  covariance_field.py  likelihood.py  neural_likelihood.py  noise.py  prior.py  task.py  wppm.py
src/psyphy/model/likelihood/: __init__.py  base.py  neural.py  oddity.py
src/psyphy/posterior/: __init__.py  base_posterior.py  diagnostics.py  mcmc_posterior.py  parameter_posterior.py  posterior.py  predictive_posterior.py
src/psyphy/session/: __init__.py
src/psyphy/trial_placement/: __init__.py  base.py  greedy_map.py  grid.py  info_gain.py  sobol.py  staircase.py
src/psyphy/utils/: __init__.py  bootstrap.py  candidates.py  diagnostics.py  math.py  rng.py
tests/: conftest.py  test_3stimulus_decision_rule.py  test_acquisition.py  test_basis_expansion.py  test_basis_input_domain.py  test_bootstrap.py  test_covariance_field.py  test_covariance_field_single_entry_point.py  test_covariance_positive_definite.py  test_data_format.py  test_diagnostics.py  test_embedding_dim.py  test_imports.py  test_input_dim_validation.py  test_mc_likelihood.py  test_mcmc_posterior.py  test_model_api.py  test_noise_models.py  test_nuts_sampler.py  test_posteriors.py  test_rectangular_U.py  test_wishart_covariance.py  test_wppm_model_kwargs_guard.py
