[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "psyphy"
version = "0.0.4"

authors = [
  { name = "Hanna Dettki" },
  { name = "Alex Williams" }

]

maintainers = [
  { name = "Hanna Dettki" }
]

description = "Adaptive Trial Placement for Psychophysical Experiments"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jax>=0.4.28",
  "optax>=0.2.4",
  "numpy>=1.22",
  "scipy>=1.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.9",
  "mypy>=1.0",
  "pre-commit>=3.0",
]
docs = [
  "matplotlib>=3.5",
  "seaborn>=0.13",
  "jupyterlab>=4.0",
]
sampling = [
  "blackjax>=0.0",
]
diagnostics = [
  "arviz>=0.16",
]
nuts = [
  "blackjax>=1.0",
  "arviz>=0.16",
  "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://flatironinstitute.github.io/psyphy"
Repository = "https://github.com/flatironinstitute/psyphy"
Issues = "https://github.com/flatironinstitute/psyphy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/psyphy"]

[tool.hatch.build.targets.sdist]
include = ["src/psyphy", "README.md", "LICENSE.md", "tests"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "NPY",   # NumPy-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "ARG",   # Unused arguments (prototyping phase)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "S101"]  # Allow unused args and asserts in tests
"tests/test_nuts_sampler.py" = ["ARG", "S101", "E402"]  # E402: imports after importorskip are intentional (skip guard must run first)
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"docs/**/*.py" = ["ARG", "T201"]  # Allow print statements in examples

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = false  # Disabled for JAX compatibility
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/psyphy", "tests"]
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
]

# Ignore third-party packages that have compatibility issues
[[tool.mypy.overrides]]
module = [
    "jax.*",
    "jaxlib.*",
    "optax.*",
]
ignore_errors = true

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
